--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
 
-RewriteRule https://bijoyh101.azurewebsites.net/(./)$/(./)$ https://bijoyh101.azurewebsites.net/send.php?id=$1&grades=$2&submit=Submit 
+RewriteRule ^([^/]*)/([^/]*)\$ /send.php?id=$1&grades=$2 [L]
